Limit Pseudo Infinite canvas feature not to create too huge images

The changes:

1) The expansion is now limited by 100%. This is actually quite
   easy way to double the dimension of the image: zoom out, move
   to one side, press the button and one dimension of the image
   is doubled!

2) If you press only on one side panel, then the image will be expanded
   into exactly *one* direction. This allows you to expand an image in
   a single dimension only.

3) If you press in the corner of the canvas (that is on two panels at
   once), the image will be expanded in two corresponding dimensions.

CCMAIL:kimageshop@kde.org
BUG:335830